feat: Update project configuration and JSF files
- Added 'docs' folder to .gitignore
- Added <f:view> tag to JSF files
- Imported CSS in JSF files using <h:outputStylesheet> instead of <link> tag
- Modified CSS file URLs in styles.css

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -1,6 +1,7 @@
-@import url("util.css");
-@import url("home.css");
-@import url("ghostNet.css");
+@import "util.css.xhtml?ln=css";
+@import "home.css.xhtml?ln=css";
+@import "ghostNet.css.xhtml?ln=css";
+
 
 
 /* Globale Stile */
