--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -1,7 +1,7 @@
 .home__background{
     background: radial-gradient(circle,rgba(255, 255, 255, 0.8) 20%,
     rgba(255, 255, 255, 0.2) 60%, rgba(255, 255, 255, 0) 80%),
-    url('../images/home.webp') no-repeat center center/cover;
+    url('../resources/images/home.webp') no-repeat center center/cover;
 }
 
 .home__content {
